[package]
name = "greed_console"
version = "0.20.0"
edition = "2021"
authors = ["Claire Moore <kurennon@gmail.com>"]
description = "A small GUI App to help with playing Greed"
license = "GPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
eframe = { version = "0.26.0", features = ["persistence"] }
egui = "0.26.0"
egui_dock = "0.11.4"
egui-notify = "0.13.0"
fastrand = "2.0.1"
indexmap = { version = "2.2.5", features = ["serde"] }
rfd = "0.14.0"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.58"
typetag = "0.2"
self_update = { version = "0.39.0", features = ["rustls"] }
webbrowser = "0.8.13"
reqwest = "0.11.26"
chrono = { version = "0.4.35", features = ["serde"] }
tracing-appender = "0.2.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
nsvg = "0.5.1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
